--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Social Progress Data</title>
+        <title>The University of Virginia</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta name="googlebot" content="index" />
         <meta name='robots' content='index, max-image-preview:large' />
-        <meta content="Social Progress Data" name="Social Progress Data ccc news update">
-        <meta content="Social Progress Data" name="Social Progress Data is the official Social Progress Data supporting the Board of Governors, Chancellor's Office, and the entire California Community College system.">
+        <meta content="The University of Virginia" name="The University of Virginia ccc news update">
+        <meta content="The University of Virginia" name="The University of Virginia is the official The University of Virginia supporting the Board of Governors, Chancellor's Office, and the entire California Community College system.">
 
         <!-- Favicon -->
         <link href="assets/img/favicon.ico" rel="icon">
@@ -33,7 +33,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="tb-contact">
-                            <p><i class="fas fa-envelope"></i>Social Progress Data@gmail.com</p>
+                            <p><i class="fas fa-envelope"></i>The University of Virginia@gmail.com</p>
                             <p><i class="fas fa-phone-alt"></i>+012 345 6789</p>
                         </div>
                     </div>
@@ -675,7 +675,7 @@
                             <h3 class="title">Get in Touch</h3>
                             <div class="contact-info">
                                 <p><i class="fa fa-map-marker"></i>123 News Street, NY, USA</p>
-                                <p><i class="fa fa-envelope"></i>Social Progress Data@gmail.com</p>
+                                <p><i class="fa fa-envelope"></i>The University of Virginia@gmail.com</p>
                                 <p><i class="fa fa-phone"></i>+123-456-7890</p>
                                 <div class="social">
                                     <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
@@ -693,7 +693,7 @@
                             <h3 class="title">Newsletter</h3>
                             <div class="newsletter">
                                 <p>
-                                   Social Progress Data is the official Social Progress Data supporting the Board of Governors, Chancellor's Office, and the entire California Community College system.
+                                   The University of Virginia is the official The University of Virginia supporting the Board of Governors, Chancellor's Office, and the entire California Community College system.
                                 </p>
                                 <form>
                                     <input class="form-control" type="email" placeholder="Your email here">
@@ -725,7 +725,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 copyright">
-                        <p>Copyright &copy; <a href="/">Social Progress Data</a>. All Rights Reserved</p>
+                        <p>Copyright &copy; <a href="/">The University of Virginia</a>. All Rights Reserved</p>
                     </div>
                 </div>
             </div>
